Fixed scrollbar dragging not registering when smooth scroll was enabled. Changed playlist carousel on collection page to instead be a grid with max 4 rows.

--- a/data/style.css
+++ b/data/style.css
@@ -251,3 +251,14 @@
 dropdown button:not(:hover) {
   background-color: transparent;
 }
+
+.no-hover-flowbox > flowboxchild {
+    background: none;
+    padding: 0;
+}
+
+.no-hover-flowbox > flowboxchild:hover,
+.no-hover-flowbox > flowboxchild:focus {
+    background: none;
+    box-shadow: none;
+}
